@@ -94,13 +94,15 @@ slapadd( int argc, char **argv )
 	{
 		fprintf( stderr, "%s: database doesn't support necessary operations.\n",
 			progname );
-		exit( EXIT_FAILURE );
+		if ( !dryrun ) {
+			exit( EXIT_FAILURE );
+		}
 	}
 
 	lmax = 0;
 	lineno = 0;
 
-	if( be->be_entry_open( be, 1 ) != 0 ) {
+	if( !dryrun && be->be_entry_open( be, 1 ) != 0 ) {
 		fprintf( stderr, "%s: could not open database.\n",
 			progname );
 		exit( EXIT_FAILURE );
@@ -308,6 +310,13 @@ slapadd( int argc, char **argv )
 			}
 		}
 
+		if ( dryrun ) {
+			if ( verbose ) {
+				fprintf( stderr, "(dry) added: \"%s\"\n", e->e_dn );
+			}
+			goto done;
+		}
+
 		if ( update_ctxcsn == SLAP_TOOL_CTXCSN_KEEP &&
 			( replica_promotion || replica_demotion )) {
 			if ( is_entry_syncProviderSubentry( e )) { 
@@ -404,8 +413,12 @@ slapadd( int argc, char **argv )
 		}
 
 		if (( !is_entry_syncProviderSubentry( e ) &&
-			 !is_entry_syncConsumerSubentry( e )) ||
-			 ( !replica_promotion && !replica_demotion )) {
+				 !is_entry_syncConsumerSubentry( e )) ||
+				 ( !replica_promotion && !replica_demotion ))
+		{
+			/* dryrun moved earlier */
+			assert( !dryrun );
+
 			if (!dryrun) {
 				ID id = be->be_entry_put( be, e, &bvtext );
 				if( id == NOID ) {
@@ -429,6 +442,7 @@ slapadd( int argc, char **argv )
 			}
 		}
 
+done:;
 		entry_free( e );
 	}
 
@@ -471,6 +485,10 @@ slapadd( int argc, char **argv )
 		
 			if ( ctxcsn_id == NOID ) {
 				ctxcsn_e = slap_create_context_csn_entry( be, &maxcsn );
+				
+				/* dryrun moved earlier */
+				assert( !dryrun );
+
 				if ( !dryrun ) {
 					ctxcsn_id = be->be_entry_put( be, ctxcsn_e, &bvtext );
 					if( ctxcsn_id == NOID ) {
@@ -496,6 +514,10 @@ slapadd( int argc, char **argv )
 					AC_MEMCPY( attr->a_vals[0].bv_val, maxcsn.bv_val, maxcsn.bv_len );
 					attr->a_vals[0].bv_val[maxcsn.bv_len] = '\0';
 					attr->a_vals[0].bv_len = maxcsn.bv_len;
+				
+					/* dryrun moved earlier */
+					assert( !dryrun );
+
 					if ( !dryrun ) {
 						ctxcsn_id = be->be_entry_modify( be, ctxcsn_e, &bvtext );
 						if( ctxcsn_id == NOID ) {
@@ -547,8 +569,12 @@ slapadd( int argc, char **argv )
 
 			if ( ctxcsn_id == NOID ) {
 				ctxcsn_e = slap_create_syncrepl_entry( be, &mc,
-												&slap_syncrepl_cn_bv,
-												&slap_syncrepl_bv );
+						&slap_syncrepl_cn_bv,
+						&slap_syncrepl_bv );
+
+				/* dryrun moved earlier */
+				assert( !dryrun );
+
 				if ( !dryrun ) {
 					ctxcsn_id = be->be_entry_put( be, ctxcsn_e, &bvtext );
 					if( ctxcsn_id == NOID ) {
@@ -575,6 +601,10 @@ slapadd( int argc, char **argv )
 					AC_MEMCPY( attr->a_vals[0].bv_val, mc.bv_val, mc.bv_len );
 					attr->a_vals[0].bv_val[maxcsn.bv_len] = '\0';
 					attr->a_vals[0].bv_len = maxcsn.bv_len;
+				
+					/* dryrun moved earlier */
+					assert( !dryrun );
+
 					if ( !dryrun ) {
 						ctxcsn_id = be->be_entry_modify( be,
 											ctxcsn_e, &bvtext );
@@ -615,7 +645,11 @@ slapadd( int argc, char **argv )
 
 			if ( ctxcsn_id == NOID ) {
 				ctxcsn_e = slap_create_syncrepl_entry( be, &sei->cookie,
-												&sei->rdn, &sei->cn );
+						&sei->rdn, &sei->cn );
+
+				/* dryrun moved earlier */
+				assert( !dryrun );
+
 				if ( !dryrun ) {
 					ctxcsn_id = be->be_entry_put( be, ctxcsn_e, &bvtext );
 					if( ctxcsn_id == NOID ) {
@@ -642,6 +676,10 @@ slapadd( int argc, char **argv )
 					AC_MEMCPY( attr->a_vals[0].bv_val, sei->cookie.bv_val, sei->cookie.bv_len );
 					attr->a_vals[0].bv_val[sei->cookie.bv_len] = '\0';
 					attr->a_vals[0].bv_len = sei->cookie.bv_len;
+					
+					/* dryrun moved earlier */
+					assert( !dryrun );
+
 					if ( !dryrun ) {
 						ctxcsn_id = be->be_entry_modify( be,
 											ctxcsn_e, &bvtext );
@@ -689,10 +727,14 @@ slapadd( int argc, char **argv )
 
 	ch_free( buf );
 
-	if( be->be_entry_close( be )) rc = EXIT_FAILURE;
+	if ( !dryrun ) {
+		if( be->be_entry_close( be ) ) {
+			rc = EXIT_FAILURE;
+		}
 
-	if( be->be_sync ) {
-		be->be_sync( be );
+		if( be->be_sync ) {
+			be->be_sync( be );
+		}
 	}
 
 	slap_tool_destroy();
