@@ -448,7 +448,7 @@ slap_tool_init(
 	mal_leaktrace(1);
 #endif
 
-	if ( slap_startup( be ) ) {
+	if ( !dryrun && slap_startup( be ) ) {
 		fprintf( stderr, "slap_startup failed\n" );
 		exit( EXIT_FAILURE );
 	}
@@ -456,7 +456,9 @@ slap_tool_init(
 
 void slap_tool_destroy( void )
 {
-	slap_shutdown( be );
+	if ( !dryrun ) {
+		slap_shutdown( be );
+	}
 	slap_destroy();
 #ifdef SLAPD_MODULES
 	if ( slapMode == SLAP_SERVER_MODE ) {
